tdf#98595 FILEOPEN: Map rectangular centered gradient to quadratic

This builds upon commit fa6d726a9369fd49ff2b6c00da682641a025ba50 to use the quadratic style when the horizontal center is at 50

Change-Id: Id80d922868ef90e321a52f39a5bf50e4110c24dc